--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -50,4 +50,4 @@ jobs:
         username: root
         key: ${{ secrets.EC2_PRIVATE_KEY }}
         source: ./
-        target: /var/www/html/
+        target: /var/www/html/myapp/
