--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -43,6 +43,17 @@ jobs:
 #        chmod +x vendor/bin/phpunit
 #        vendor/bin/phpunit --migrate-configuration
 
+    - name: permisson
+      uses: appleboy/ssh-action@master
+      with:
+        host: 65.0.179.142
+        username: ubuntu
+        key: ${{ secrets.EC2_PRIVATE_KEY }}
+        script: |
+          sudo rm -rf /var/www/myapp/
+          sudo mkdir /var/www/myapp/
+          sudo chmod 777 /var/www/myapp/
+
     - name: Push Code to EC2 Instance
       uses: appleboy/scp-action@master
       with:
@@ -50,4 +61,5 @@ jobs:
         username: ubuntu
         key: ${{ secrets.EC2_PRIVATE_KEY }}
         source: ./
-        target: /var/www/html/myapp/
+        target: /var/www/myapp/
+        command_opts: '-r -i'
