--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -50,9 +50,9 @@ jobs:
         username: ubuntu
         key: ${{ secrets.EC2_PRIVATE_KEY }}
         script: |
-          sudo rm -rf /var/www/myapp/
-          sudo mkdir /var/www/myapp/
-          sudo chmod 777 /var/www/myapp/
+          sudo rm -rf /var/www/html/myapp
+          sudo mkdir /var/www/html/myapp
+          sudo chmod 777 /var/www/html/myapp/
 
     - name: Push Code to EC2 Instance
       uses: appleboy/scp-action@master
@@ -61,5 +61,5 @@ jobs:
         username: ubuntu
         key: ${{ secrets.EC2_PRIVATE_KEY }}
         source: ./*
-        target: /var/www/myapp/
+        target: /var/www/html/myapp/
         command_opts: '-r -i'
