--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -6,60 +6,54 @@ on:
 
 jobs:
   laravel-tests:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
-      with:
-        php-version: '8.1'
-    - uses: actions/checkout@v3
+   runs-on: ubuntu-latest
+   steps:
+    - uses: actions/checkout@v2
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Install PHP Dependencies
-      run: composer install
-    - name: Install Node.js and NPM
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
-    - name: npm install
-      run: npm install
-#    - name: npm run dev
-#      run: npm run dev      
-    - name: Generate Key
+    - name: Install Dependencies
+      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+    - name: Generate key
       run: php artisan key:generate
-    - name: Set File Permissions
+    - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
     - name: Create Database
       run: |
         mkdir -p database
         touch database/database.sqlite
-        ls -a
-    - name: Execute Tests (Unit and Feature Tests) via PHPUnit
+    - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
-      run: |
-        php artisan migrate
-#        chmod +x vendor/bin/phpunit
-#        vendor/bin/phpunit --migrate-configuration
-
-    - name: permisson
-      uses: appleboy/ssh-action@master
+      run: vendor/bin/phpunit
+      
+  build:
+   runs-on: ubuntu-latest
+   steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Setup Node.js
+      uses: actions/setup-node@v2-beta
       with:
-        host: 65.0.179.142
-        username: ubuntu
+        node-version: '12'
+        check-latest: true
+    - name: Install NPM dependencies
+      run: npm install
+    - name: Compile assets for production
+      run: npm run production
+  deploy:
+   runs-on: ubuntu-latest
+   steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Deployment
+      uses: appleboy/ssh-action@main
+      with:
+        host: 15.206.165.180
         key: ${{ secrets.EC2_PRIVATE_KEY }}
+        username: ubuntu
         script: |
-          sudo rm -rf /var/www/html/myapp
-          sudo mkdir /var/www/html/myapp
-          sudo chmod 777 /var/www/html/myapp/
-
-    - name: Push Code to EC2 Instance
-      uses: appleboy/scp-action@master
-      with:
-        host: 65.0.179.142
-        username: ubuntu
-        key: ${{ secrets.EC2_PRIVATE_KEY }}
-        source: ./*
-        target: /var/www/html/myapp/
-        command_opts: '-r -i'
+          cd /var/www/html/
+          sudo rm -rf myapp
+          git checkout -f 
+          git pull
