--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
     - name: Deployment
-      uses: appleboy/ssh-action@main
+      uses: appleboy/ssh-action@master
       with:
         host: 15.206.165.180
         key: ${{ secrets.EC2_PRIVATE_KEY }}
