--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -45,5 +45,5 @@ jobs:
         script: |
           cd /var/www/html/
           sudo rm -rf myapp
-          git checkout -f 
-          git pull master
+        #  git checkout -f 
+         # git pull master
