--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -45,5 +45,4 @@ jobs:
         script: |
           cd /var/www/html/
           sudo rm -rf myapp
-          git checkout -f 
-          git pull master
+          git clone git@github.com:Ghaterishi/laravel-new.git
