--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -43,6 +43,4 @@ jobs:
         key: ${{ secrets.EC2_PRIVATE_KEY }}
         username: ubuntu
         script: |
-          cd /var/www/html/
-          sudo rm -rf myapp
-          git clone git@github.com:Ghaterishi/laravel-new.git .
+          cd /var/www/html/ &&./server_deploy.sh
