--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -43,7 +43,7 @@ jobs:
         key: ${{ secrets.EC2_PRIVATE_KEY }}
         username: ubuntu
         script: |
-           cd /var/www/html/ &&  sudo mkdir myapp 
-           cd myapp && git checkout master
+           cd /var/www/html/myapp
+           git checkout master
            git fetch --all && git reset --hard orgin/master 
            git pull origin master 
